--- a/src/App.css
+++ b/src/App.css
@@ -7,104 +7,10 @@
 }
 
 /*<========= HOME ========>*/
-.home_container{
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px 50px;
-    justify-content: center;
-}
-
-.card_link{
-    text-decoration: none;
-    color: inherit;
-}
+@import "./styles/home.css";
 
 /*<========= PRODUCT CARD ========>*/
-.card_container{
-    width: 280px;
-    height: 100%;
-    padding: 1rem .75rem;
-    background-color: ivory;
-    border-radius: 1rem;
-    border: .5px solid lightblue;
-    cursor: pointer;
-}
-
-.card_content{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.product_card--img_container{
-    flex: 1;
-    width: 100%;
-    height: 250px;
-    margin-bottom: 10px;
-    object-fit: cover;
-    overflow: hidden;
-    border-radius: 1rem;
-}
-
-.product_card--img{
-    width: 100%;
-}
-
-.product_details_container{
-    flex: .8;
-    display: grid;
-    justify-content: space-between;
-}
-
-.product_title{
-    font-size: 18px;
-}
-
-.product_tag{
-    display: inline-block;
-    margin: 5px;
-    background-color: rgb(224, 224, 224);
-    border-radius: 1rem;
-    padding: 3px 10px;
-}
-
-.product_price{
-    display: flex;
-    margin-top: 10px;
-    align-items: center
-}
+@import "./styles/productCard.css";
 
 /*<========= PRODUCT PAGE ========>*/
-
-.product_container{
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 50px;
-}
-
-.product_image--container{
-    min-width: 280px;
-    object-fit: cover;
-    border-radius: 3rem;
-    overflow: hidden;
-}
-
-.product_image{
-    width: 100%;
-}
-
-.product_content--container{
-    min-width: 280px;
-}
-
-@media screen and (max-width: 780px){
-    .product_container{
-        flex-wrap: wrap;
-    }
-
-    .product_image--container{
-        margin: auto;
-    }
-
-}
+@import "./styles/productPage.css";
